# atomata

./: .gitignore  Cargo.toml  README.md  flake.nix  index.html  index.js  package-lock.json  package.json  requirements.txt  results.ipynb  results_i1.ipynb  results_i1.pickle  shell.nix  webpack.config.js
.github/workflows/: cd.yaml  ci.yaml
pkg/: package.json  web.d.ts  web.js  web_bg.wasm  web_bg.wasm.d.ts
python/: metric.py  repository.py
results/: results_i1.ipynb  results_i2.ipynb
results/python/: preprocessing.py  repository.py
src/: lib.rs  main.rs  parameters.rs  particle.rs  persistence.rs  sphere.rs
web/: build.sh  index.html
