[package]
name = "atomata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
three-d = { version = "0.16.4", features = ["window", "egui-gui"] }
rand = "=0.8.5"
bincode = "1.3.3"
sled = "0.34.7"
serde = {version = "1.0.203", features = ["derive"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
getrandom = { version = "0.2.12", features = ["js"] }
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1"
